# MultiQC_SAV

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.js  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yaml  lint_code.yaml  linux.yaml  publish.yaml
docs/example/: NextSeq500_report.html  NovaSeq_report.html
multiqc_sav/: __init__.py  cli.py  multiqc_sav.py  sav_interop.py
multiqc_sav/modules/: sav.py
multiqc_sav/modules/sav/: __init__.py  sav.py
multiqc_sav/templates/cmgg/: __init__.py  footer.html  header.html
test_data/HiSeq/: RunInfo.xml  RunParameters.xml
test_data/MiSeq/: CompletedJobInfo.xml  GenerateFASTQRunStatistics.xml  RunCompletionStatus.xml  RunInfo.xml  RunParameters.xml
test_data/MiSeqI100/: RunCompletionStatus.xml  RunInfo.xml  RunParameters.xml
test_data/NextSeq2000/: RunCompletionStatus.xml  RunInfo.xml  RunParameters.xml
test_data/NextSeq500/: RTAConfiguration.xml  RunCompletionStatus.xml  RunInfo.xml  RunParameters.xml
test_data/NovaSeq/: RunParameters.xml
test_data/NovaSeq6000/: RunInfo.xml
test_data/NovaSeqX/: RunCompletionStatus.xml  RunInfo.xml  RunParameters.xml
