[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "multiqc_sav"
version = "0.0.4"
description = "MultiQC plugin for Illumina SAV Graphs and tables"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Matthias De Smet", email = "11850640+matthdsm@users.noreply.github.com" }]
keywords = ["bioinformatics", "illumina", "sequencing", "quality-control", "multiqc"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "interop>=1.1.23",
    "multiqc>=1.10",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
    "mypy",
    "pytest",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/MultiQC/MultiQC_SAV"
Repository = "https://github.com/MultiQC/MultiQC_SAV"
Issues = "https://github.com/MultiQC/MultiQC_SAV/issues"

[project.entry-points."multiqc.hooks.v1"]
config_loaded = "multiqc_sav.multiqc_sav:update_config"

[project.entry-points."multiqc.modules.v1"]
SAV = "multiqc_sav.modules.sav:SAV"

[tool.setuptools.packages.find]
include = ["multiqc_sav*"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without strict parameter
    "ARG001", # unused function argument (common in MultiQC modules)
    "ARG002", # unused method argument
]

[tool.ruff.lint.isort]
known-first-party = ["multiqc_sav"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
